--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-Gemfile.lock
 public/javascripts
 public/vendor
+public/stylesheets
 public/build.txt
 assets/vendor
 .sass-cache
 .DS_Store
+assets-clean_copy
