--- a/bower.json
+++ b/bower.json
@@ -28,6 +28,9 @@
     "r.js": "~2.1.18",
     "requirejs": "~2.1.18",
     "respond": "~1.4.2",
-    "sprintf": "~1.0.2"
+    "sprintf": "~1.0.2",
+    "postal.diagnostics": "~0.7.4",
+    "react": "~0.13.3",
+    "postal": "~1.0.6"
   }
 }
