--- a/bower.json
+++ b/bower.json
@@ -31,6 +31,10 @@
     "sprintf": "~1.0.2",
     "postal.diagnostics": "~0.7.4",
     "react": "~0.13.3",
-    "postal": "~1.0.6"
+    "postal": "~1.0.6",
+    "postal.request-response": "~0.3.1"
+  },
+  "resolutions": {
+    "lodash": "3.x"
   }
 }
